--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.12.2",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
+    "vue-chartjs": "^5.3.2",
+    "vue-echarts": "^7.0.3",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
